force-app/main/default/objects/ICX_GenesysSettings__c/ICX_GenesysSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings of Genesys integration</description>
    <label>ICX Genesys Settings</label>
</CustomObject>