force-app/main/default/objects/ICX_GenesysSettings__c/fields/ClientelingStatusId__c.field-meta.xml
<CustomField>
    <fullName>ClientelingStatusId__c</fullName>
    <description>Genesys clienteling status ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Genesys clienteling status ID</inlineHelpText>
    <label>Clienteling Status ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>