force-app/main/default/objects/ICX_GenesysSettings__c/fields/HongKongQueueId__c.field-meta.xml
<CustomField>
    <fullName>HongKongQueueId__c</fullName>
    <description>Used to update the Tech queue Id field of Case China routed to HKG</description>
    <inlineHelpText>Used to update the Tech queue Id field of Case China routed to HKG</inlineHelpText>
    <label>Hong Kong Queue ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>