force-app/main/default/objects/ICX_GenesysSettings__c/fields/LogEnabled__c.field-meta.xml
<CustomField>
    <fullName>LogEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Log Genesys event data in Logs__c Object</description>
    <label>Log Enabled</label>
    <type>Checkbox</type>
</CustomField>