force-app/main/default/objects/ICX_GenesysSettings__c/fields/MonitoringStatusId__c.field-meta.xml
<CustomField>
    <fullName>MonitoringStatusId__c</fullName>
    <description>ID of Genesys Monitoring status</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of Genesys Monitoring status</inlineHelpText>
    <label>Monitoring Status ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>