force-app/main/default/objects/ICX_GenesysSettings__c/fields/MonitoringUserId__c.field-meta.xml
<CustomField>
    <fullName>MonitoringUserId__c</fullName>
    <description>User Id to assign Monitoring Task</description>
    <label>Monitoring User Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>