force-app/main/default/objects/ICX_GenesysSettings__c/fields/TaskRetryLimit__c.field-meta.xml
<CustomField>
    <fullName>TaskRetryLimit__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Limit number of requests to find a task created by the class extension of Genesys to display it</description>
    <inlineHelpText>Limit number of requests to find a task created by the class extension of Genesys to display it</inlineHelpText>
    <label>Task Retry Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>